[gd_scene load_steps=10 format=2]

[ext_resource path="res://ESCENAS/juego.gd" type="Script" id=1]
[ext_resource path="res://SPRITE/FONDO.png" type="Texture" id=2]
[ext_resource path="res://SPRITE/titulojuego.png" type="Texture" id=3]
[ext_resource path="res://SPRITE/cuadro.png" type="Texture" id=4]
[ext_resource path="res://SPRITE/turno.png" type="Texture" id=5]
[ext_resource path="res://SPRITE/fondofinalizar.png" type="Texture" id=6]
[ext_resource path="res://SPRITE/jugadorx.png" type="Texture" id=7]
[ext_resource path="res://SPRITE/volvermenu.png" type="Texture" id=8]
[ext_resource path="res://SPRITE/volverjugar.png" type="Texture" id=9]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="fondo" type="TextureRect" parent="."]
margin_right = 500.0
margin_bottom = 800.0
rect_min_size = Vector2( 500, 800 )
texture = ExtResource( 2 )
expand = true

[node name="titulojuego" type="TextureRect" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 200.0
rect_min_size = Vector2( 400, 150 )
texture = ExtResource( 3 )

[node name="b1" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 280.0
margin_right = 150.0
margin_bottom = 380.0
texture_normal = ExtResource( 4 )

[node name="b2" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 280.0
margin_right = 300.0
margin_bottom = 380.0
texture_normal = ExtResource( 4 )

[node name="b3" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 280.0
margin_right = 450.0
margin_bottom = 380.0
texture_normal = ExtResource( 4 )

[node name="b4" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 430.0
margin_right = 150.0
margin_bottom = 530.0
texture_normal = ExtResource( 4 )

[node name="b5" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 430.0
margin_right = 300.0
margin_bottom = 530.0
texture_normal = ExtResource( 4 )

[node name="b6" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 430.0
margin_right = 450.0
margin_bottom = 530.0
texture_normal = ExtResource( 4 )

[node name="b7" type="TextureButton" parent="."]
margin_left = 50.0
margin_top = 580.0
margin_right = 150.0
margin_bottom = 680.0
texture_normal = ExtResource( 4 )

[node name="b8" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 580.0
margin_right = 300.0
margin_bottom = 680.0
texture_normal = ExtResource( 4 )

[node name="b9" type="TextureButton" parent="."]
margin_left = 350.0
margin_top = 580.0
margin_right = 450.0
margin_bottom = 680.0
texture_normal = ExtResource( 4 )

[node name="turno" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 220.0
margin_right = 400.0
margin_bottom = 260.0
rect_min_size = Vector2( 300, 40 )
texture = ExtResource( 5 )

[node name="fondoFinal" type="TextureRect" parent="."]
visible = false
margin_left = 50.0
margin_top = 200.0
margin_right = 450.0
margin_bottom = 600.0
texture = ExtResource( 6 )

[node name="ganador" type="TextureRect" parent="."]
visible = false
margin_left = 100.0
margin_top = 250.0
margin_right = 400.0
margin_bottom = 350.0
texture = ExtResource( 7 )

[node name="menu" type="TextureButton" parent="."]
visible = false
margin_left = 100.0
margin_top = 480.0
margin_right = 400.0
margin_bottom = 560.0
texture_normal = ExtResource( 8 )

[node name="volver" type="TextureButton" parent="."]
visible = false
margin_left = 100.0
margin_top = 380.0
margin_right = 400.0
margin_bottom = 460.0
texture_normal = ExtResource( 9 )
[connection signal="pressed" from="b1" to="." method="_on_b1_pressed"]
[connection signal="pressed" from="b2" to="." method="_on_b2_pressed"]
[connection signal="pressed" from="b3" to="." method="_on_b3_pressed"]
[connection signal="pressed" from="b4" to="." method="_on_b4_pressed"]
[connection signal="pressed" from="b5" to="." method="_on_b5_pressed"]
[connection signal="pressed" from="b6" to="." method="_on_b6_pressed"]
[connection signal="pressed" from="b7" to="." method="_on_b7_pressed"]
[connection signal="pressed" from="b8" to="." method="_on_b8_pressed"]
[connection signal="pressed" from="b9" to="." method="_on_b9_pressed"]
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
